[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
name = "nomad-distribution"
description = "nomad distribution template"
version = "0.1"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[parsing, infrastructure]>=1.3.4"]

[project.optional-dependencies]
plugins = [
  "perovskite-solar-cell-database @ git+https://github.com/FAIRmat-NFDI/nomad-perovskite-solar-cells-database.git@f394d21abafeb659729af0c94e5f90949fce01c1",
  'nomad-material-processing',
  'nomad-baseclasses @ git+https://github.com/nomad-hzb/nomad-baseclasses.git@c6e45c789c45a0f8e0566f844c80db247b0538cf',
  'nomad-hysprint @ git+https://github.com/nomad-hzb/nomad-hysprint.git@67be013862b82bcc6257dbfc8c0eb231f69a3a97',
  'hzb-combinatorial-libraries @ git+https://github.com/nomad-hzb/hzb-combinatorial-libraries-plugin.git',
  'nomad-chemical-energy @ git+https://github.com/nomad-hzb/nomad-chemical-energy.git@39f19c5f235fb6a81008c4bcda6cdcaf4ce05846'
]
jupyter = ['voila',
'ipyaggrid',
'ipysheet',
'ipydatagrid',
'jupyter-flex',
'baybe',
'pyvis'
]
dev = ["nomad-lab[parsing, infrastructure, dev]>=1.3.8"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "disallow"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
